{
    "name": "StandardInput",
    "maps": [
        {
            "name": "GameplayMap",
            "id": "e02f8973-846d-409a-99ec-180914ef7e94",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "cbe06dbc-653f-4912-9817-8c2ab3d1abac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell1",
                    "type": "Button",
                    "id": "5829ae3a-0eec-44bc-84e4-68e736b86d0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell2",
                    "type": "Button",
                    "id": "8ff526d7-9c9b-4ce8-a46e-e372309f5af5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell3",
                    "type": "Button",
                    "id": "f5872b1a-35d7-42d8-88ea-92ef1ad8a4c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell4",
                    "type": "Button",
                    "id": "b4afbaec-2bf2-47dc-bea6-d6983bf8883c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell5",
                    "type": "Button",
                    "id": "33ea8082-53de-40a9-a3d3-14092ed3245a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell6",
                    "type": "Button",
                    "id": "58ed0b06-66b9-4011-8314-d6860802f4ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell7",
                    "type": "Button",
                    "id": "4ac86a5d-7bf7-4640-a2aa-f06e8a078384",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell8",
                    "type": "Button",
                    "id": "35cf17bf-c238-4001-a66f-06f2c7e2c93f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell9",
                    "type": "Button",
                    "id": "1212190a-a773-45c1-b3c9-e8c710d20451",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell10",
                    "type": "Button",
                    "id": "9b4849a6-c7a4-4f8f-b954-0bf5ba4976db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell11",
                    "type": "Button",
                    "id": "0854e6a2-413b-4c3a-aecc-cb0162c0788c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell12",
                    "type": "Button",
                    "id": "5b9e3f9d-6108-44de-a64f-1488c9701992",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell13",
                    "type": "Button",
                    "id": "20501e33-2d85-46db-8be6-14fc38dfa9ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell14",
                    "type": "Button",
                    "id": "6c2460c0-fa25-44f5-ae6d-05fe64ffd001",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell15",
                    "type": "Button",
                    "id": "1f982958-7c69-491b-b028-8c7f96a4a497",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell16",
                    "type": "Button",
                    "id": "672d3e6b-8dcd-4c5c-a868-98a0551480ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "44516835-b257-46c8-abad-39ef22ace919",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltClick",
                    "type": "Button",
                    "id": "bf412cd3-b50b-471d-b533-fea7edb37f24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "AltDoubleClick",
                    "type": "Button",
                    "id": "3f34b3c5-d9ec-4e7c-8fc8-3d66d3d00f20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchAutoMode",
                    "type": "Button",
                    "id": "f54e5d04-26d1-4e01-896f-f076220314c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftMouse",
                    "type": "Button",
                    "id": "44eeeadf-ff68-4132-9eb6-ad11777daf47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollMouse",
                    "type": "Value",
                    "id": "56c07c89-6e78-47f8-b932-70b5db00d2fb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShowMenu",
                    "type": "Button",
                    "id": "112bcf04-8e2c-4c22-aefc-7382a08ded0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowSource",
                    "type": "Button",
                    "id": "ae4f2201-2591-45de-afdc-e1c7c5601321",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpaceMouse",
                    "type": "Button",
                    "id": "b70078f0-91e3-4ada-8895-f72efad55c5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2d0c6642-bf07-4434-a7d6-bb22213037bc",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fa5d5556-e1e3-409d-96a2-8a7795801e7b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c81b48e7-d304-4369-99c5-26db511530ef",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8d868b83-7fbd-44ce-a281-8dead70048af",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c0debb60-51cd-4e66-86fa-417d78d6bdf6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eda4cdab-6259-416c-91ff-dde9fd2b0cdb",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ce7edfa-1ea3-44b8-874d-84244bba45ae",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "518ff43c-f6e8-422a-a911-eeec2d0c3777",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5de434c9-0417-48c5-a0d3-5717c628ae97",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ced5113-28cb-4bdb-8c20-01686d1cb8ee",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "984c70d2-c9c4-413a-b26f-42a5d5de2e86",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "141e7693-f065-43c1-8a16-aa54d8c19def",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eac2a2b7-4104-4f0f-99ef-5bf36abdf2d0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltDoubleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c4f201f-0ec4-42b2-98ee-a58a8f3bcaae",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d35cb6df-5596-4f1b-a8c5-a4e8a556d07b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64fa2808-d8d4-43d3-9816-8474de2d1239",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34f7e20e-e141-424a-a245-2f0151531024",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a41cbe4e-57f7-4f98-8f71-5e2bff61b6fe",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell10",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ff422cf-ae3e-4955-b4bb-2501b8977b4e",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell11",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9457032-943e-42a8-8565-fd4419d83569",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell12",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c411925-34ad-4835-ab89-e6f32fe667a8",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell13",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88a77d19-8d19-418c-80e6-b4c0237cd405",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell14",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4ba3cc3-18ee-476f-b768-925330c29dd6",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell15",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2cf1b2c-2382-421a-a59d-f9ce99e51c02",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell16",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "d5e33051-6068-4ea6-85c8-54ce0a28b536",
                    "path": "OneModifier(overrideModifiersNeedToBePressedFirst=true)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchAutoMode",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "c172b242-1a92-487f-bc74-b3633c12faa4",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchAutoMode",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "9b0a6bad-5d24-466c-8339-532c7fe0a714",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchAutoMode",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "5beb35e5-391f-4ec7-8cb9-8a8a077b74ed",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollMouse",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cb192214-2d32-4867-9e53-e77c17ae05a4",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "705ed161-a4e2-4d36-91bd-16646c0a709c",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "9479e03f-3c70-4523-ab21-cb1060d3420a",
                    "path": "OneModifier(overrideModifiersNeedToBePressedFirst=true)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftMouse",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "8c3d2e27-5ce9-4ba2-bb92-0267f969b6c2",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "a87490d1-8f08-49d5-9e9f-742014deb4f1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "adc473ee-2cf3-4d8c-ac0e-63c0e54c9528",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "f92e639c-e487-4c3e-87a1-3be633068231",
                    "path": "OneModifier(overrideModifiersNeedToBePressedFirst=true)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpaceMouse",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "46aa35e6-d059-4b96-afdb-ea738eb4377b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpaceMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "b731d84c-18e0-4525-bfb4-0b24e2420ce1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpaceMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f76ddb06-977e-4a58-aab6-f69283bda8c6",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowSource",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}